feat(nodes): 新增曲线插值和几何变形节点功能
- 在Curve工具类中使用现代switch表达式替代传统switch语句
- 将LinkedList的get(0)调用替换为更语义化的getFirst()
- 添加Tween Curves节点用于在两个曲线间创建均匀间隔的中间曲线
- 添加Blend Curves节点用于在两条曲线端点间创建平滑过渡曲线
- 添加Twist Geometry节点用于对几何体应用轴向扭曲变形
- 添加Closest Point To Object节点用于查找点到几何对象的最近点
- 更新文档统计信息以反映新增的节点数量变化
- 实现TwistedSdfData数据类型支持扭曲